--- a/04 - Array Cardio Day 1/index-START.html
+++ b/04 - Array Cardio Day 1/index-START.html
@@ -38,29 +38,62 @@
     
     // Array.prototype.filter()
     // 1. Filter the list of inventors for those who were born in the 1500's
-
+    const fifteen = inventors.filter(item => item.year >= 1500 && item.year < 1600);
+    console.table(fifteen)
     // Array.prototype.map()
     // 2. Give us an array of the inventors first and last names
+    const firstLast = inventors.map( inventor =>
+      (`${inventor.first} ${inventor.last}`)
+    )
+    console.log(firstLast);
 
     // Array.prototype.sort()
     // 3. Sort the inventors by birthdate, oldest to youngest
 
+    const sortBirthdate = inventors.sort((prev, curr) => prev.year - curr.year)
+    console.table(sortBirthdate)
     // Array.prototype.reduce()
     // 4. How many years did all the inventors live all together?
-
+    const yearsLived = inventors.reduce((total,curr) => total + (curr.passed - curr.year), 0);
+    console.log(yearsLived)
     // 5. Sort the inventors by years lived
-
+    const sortByYears = inventors.sort((a, b) => (b.passed - b.year) - (a.passed - a.year));
+    console.table(sortByYears)
     // 6. create a list of Boulevards in Paris that contain 'de' anywhere in the name
     // https://en.wikipedia.org/wiki/Category:Boulevards_in_Paris
+
+    // Uncomment below
+    // const category = document.querySelector(".mw-category.mw-category-columns");
+    // const links = Array.from(category.querySelectorAll('a'));
+    // const de = links
+    //           .map( link => link.textContent)
+    //           .filter(streetname => streetname.includes('de'));
 
 
     // 7. sort Exercise
     // Sort the people alphabetically by last name
 
+
+    const sortByName = people.sort((lastOne, nextOne) => {
+      const [aLast, aFirst] = lastOne.split(', ');
+      const [bLast, bFirst] = nextOne.split(', ');
+      return aLast > bLast ? 1 : -1;
+    });
+    console.log(sortByName);
     // 8. Reduce Exercise
     // Sum up the instances of each of these
     const data = ['car', 'car', 'truck', 'truck', 'bike', 'walk', 'car', 'van', 'bike', 'walk', 'car', 'van', 'car', 'truck' ];
 
+    const reducedData = data.reduce(function(obj, item) {
+      if(!obj[item]) {
+        obj[item] = 0;
+      }
+      
+      obj[item] ++;
+      return obj;
+    }, {})
+
+    console.log(reducedData);
   </script>
 </body>
 </html>
